make-a-wish-salesforce/src/objects/GETGSI__Approval_Status__c.object
<CustomObject>
    <fields>
        <fullName>GETGSI__Actor_Id__c</fullName>
        <label>User/Queue Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETGSI__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GETGSI__Commit_Id__c</fullName>
        <label>Commit Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETGSI__Commit_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commit Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GETGSI__Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GETGSI__Reassign_To_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassign To User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GETGSI__Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETGSI__Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETGSI__Work_Item_Id__c</fullName>
        <label>Work Item Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Approval Status</label>
    <listViews>
        <fullName>GETGSI__All1</fullName>
        <columns>NAME</columns>
        <columns>GETGSI__Comment__c</columns>
        <columns>GETGSI__Commit_Id__c</columns>
        <columns>GETGSI__Commit_Records__c</columns>
        <columns>GETGSI__Failed__c</columns>
        <columns>GETGSI__Reassign_To_User__c</columns>
        <columns>GETGSI__Status__c</columns>
        <columns>GETGSI__Type__c</columns>
        <columns>GETGSI__Work_Item_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>